working on second screen

--- a/breakout.html
+++ b/breakout.html
@@ -19,7 +19,7 @@
         .nav{
             width: 1100px;
             background-color: antiquewhite;
-            margin: auto;
+            margin:auto;
             overflow: auto;
 
         }
@@ -32,7 +32,7 @@
             float:left;
         }
         a:link{
-            color: brown;
+            color: darkturquoise;
             width: 100px;
             text-decoration: none;
             display: block;
@@ -48,7 +48,7 @@
   </head>
   <body>
   <div class= "header">
-      <img src = "./header/logo1.jpg" width = "1685px" height = "140px">
+      <img src = "./header/logo1 copy.jpg" width = "1685px" height = "140px">
 
   </div>
   <div class = "nav">
